<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="@dimen/marginLeftAndRightLogin"
    android:paddingRight="@dimen/marginLeftAndRightLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:textSize="@dimen/textSizeTextViewLogin"/>


    <EditText
        android:id="@+id/second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/second_name"
        android:background="@drawable/edit_text"
        android:layout_marginBottom="@dimen/marginBottomLogin"
        android:textSize="@dimen/fontSizeEditTextLogin"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="@dimen/textSizeTextViewLogin"/>


    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/first_name"
        android:background="@drawable/edit_text"
        android:layout_marginBottom="@dimen/marginBottomLogin"
        android:textSize="@dimen/fontSizeEditTextLogin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patronymic"
        android:textSize="@dimen/textSizeTextViewLogin"/>


    <EditText
        android:id="@+id/patronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/patronymic"
        android:background="@drawable/edit_text"
        android:layout_marginBottom="@dimen/marginBottomLogin"
        android:textSize="@dimen/fontSizeEditTextLogin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/textSizeTextViewLogin"/>


    <EditText
        android:id="@+id/login_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/login"
        android:background="@drawable/edit_text"
        android:layout_marginBottom="@dimen/marginBottomLogin"
        android:textSize="@dimen/fontSizeEditTextLogin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="@dimen/textSizeTextViewLogin"/>


    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/password"
        android:background="@drawable/edit_text"
        android:layout_marginBottom="@dimen/marginBottomLogin"
        android:textSize="@dimen/fontSizeEditTextLogin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="@dimen/textSizeTextViewLogin"/>


    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/password"
        android:background="@drawable/edit_text"
        android:layout_marginBottom="@dimen/marginBottomLogin"
        android:textSize="@dimen/fontSizeEditTextLogin"/>

    <Button
        android:id="@+id/registration_to_register"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/register"
        android:textSize="@dimen/fontSizeButtonLogin"
        android:background="@drawable/button_login"/>

</LinearLayout>